JIRA 7 support