@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tuncaysenturk.jira.plugins</groupId>
     <artifactId>jira-twitter-plugin</artifactId>
-    <version>1.4.0</version>
+    <version>2.0.0</version>
     <description>Twitter Plugin for JIRA, makes your company more social. Just configure with a Twitter account, then do your basic JIRA updates within Twitter, even though you do not have a VPN or direct connection to your company.</description>
     <scm/>
     <organization>
@@ -13,84 +13,143 @@
     <name>Twitter Plugin for JIRA</name>
     <packaging>atlassian-plugin</packaging>
     <dependencies>
-        <dependency>
-            <groupId>com.atlassian.jira</groupId>
-            <artifactId>jira-api</artifactId>
-            <version>${jira.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.jira</groupId>
-            <artifactId>jira-core</artifactId>
-            <version>${jira.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.upm</groupId>
-            <artifactId>plugin-license-storage-lib</artifactId>
-            <version>${upm.license.compatibility.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.upm</groupId>
-            <artifactId>plugin-license-storage-plugin</artifactId>
-            <version>${upm.license.compatibility.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.upm</groupId>
-            <artifactId>licensing-api</artifactId>
-            <version>${upm.license.compatibility.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.upm</groupId>
-            <artifactId>upm-api</artifactId>
-            <version>${upm.license.compatibility.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.sal</groupId>
-            <artifactId>sal-api</artifactId>
-            <version>${sal.api.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.templaterenderer</groupId>
-            <artifactId>atlassian-template-renderer-api</artifactId>
-            <version>${atlassian.templaterenderer.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.osgi</groupId>
-            <artifactId>spring-osgi-core</artifactId>
-            <version>1.1.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.1.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.8.5</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- JIRA API and core -->
+		<dependency>
+			<groupId>com.atlassian.jira</groupId>
+			<artifactId>jira-api</artifactId>
+			<version>${jira.version}</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-all</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.jira</groupId>
+			<artifactId>jira-core</artifactId>
+			<version>${jira.version}</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<!-- Spring libraries -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>2.5.6</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.osgi</groupId>
+			<artifactId>spring-osgi-core</artifactId>
+			<version>1.2.1</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- Atlassian Helper libraries -->
+		<dependency>
+			<groupId>com.atlassian.sal</groupId>
+			<artifactId>sal-api</artifactId>
+			<version>${sal.api.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.templaterenderer</groupId>
+			<artifactId>atlassian-template-renderer-api</artifactId>
+			<version>${atlassian.templaterenderer.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- Licensing -->
+		<dependency>
+			<groupId>com.atlassian.upm</groupId>
+			<artifactId>licensing-api</artifactId>
+			<version>${upm.license.compatibility.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.upm</groupId>
+			<artifactId>upm-api</artifactId>
+			<version>${upm.license.compatibility.version}</version>
+			<scope>provided</scope>
+		</dependency>
+        
+        <!-- Active objects -->
+		<dependency>
+			<groupId>com.atlassian.activeobjects</groupId>
+			<artifactId>activeobjects-plugin</artifactId>
+			<version>${ao.version}</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>guava</artifactId>
+					<groupId>com.google.guava</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.activeobjects</groupId>
+			<artifactId>activeobjects-test</artifactId>
+			<version>${ao.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>guava</artifactId>
+					<groupId>com.google.guava</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<!-- Third party libraries -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${javax.servlet.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.1</version>
+			<scope>test</scope>
+		</dependency>
+        
+        <!-- Twitter libraries -->
         <dependency>
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
@@ -115,51 +174,27 @@
             <version>3.0.3</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>com.atlassian.activeobjects</groupId>
-            <artifactId>activeobjects-plugin</artifactId>
-            <version>${ao.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.activeobjects</groupId>
-            <artifactId>activeobjects-test</artifactId>
-            <version>${ao.version}</version>
-            <scope>test</scope>
-        </dependency>
+        
+        <!-- ##### TEST DEPENDENCIES ##### -->
         <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>1.8.0.10</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.2</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.jira</groupId>
-            <artifactId>jira-func-tests</artifactId>
-            <version>${jira.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpg-jdk16</artifactId>
-            <version>1.43</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>1.43</version>
         </dependency>
     </dependencies>
     <build>
@@ -170,89 +205,51 @@
                 <version>${amps.version}</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <enableFastdev>false</enableFastdev>
                     <productVersion>${jira.version}</productVersion>
-                    <productDataVersion>${jira.data.version}</productDataVersion>
+					<productDataVersion>${jira.data.version}</productDataVersion>
+					<enableQuickReload>true</enableQuickReload>
+					<enableFastdev>false</enableFastdev>
+					<jvmArgs>-server -Xmx1g -XX:MaxPermSize=512m</jvmArgs>
+					<systemPropertyVariables>
+						<atlassian.mail.senddisabled>false</atlassian.mail.senddisabled>
+					</systemPropertyVariables>
                     <instructions>
-                        <Private-Package>com.atlassian.upm.license.storage.lib*</Private-Package>
-                        <Import-Package>
-                        	twitter4j*, 
-                        	com.atlassian.upm.api.license.entity;version="2.0.1", 
-                        	com.atlassian.upm.api.license;version="2.0.1", 
-                        	com.atlassian.upm.api.util;version="2.0.1", 
-                        	com.atlassian.upm.license.storage.plugin;version="${upm.license.compatibility.version}", 
-                        	!twitter4j.internal.http.alternative,
+						<Import-Package>
+							twitter4j*,
+							!twitter4j.internal.http.alternative,
                         	!dalvik.system,
                         	!com.google.appengine.api.urlfetch,org.slf4j;version="1.5",
-                        	*;resolution:=optional
-                        </Import-Package>
-                    </instructions>
-                    <pluginArtifacts>
-                        <pluginArtifact>
-                            <groupId>com.atlassian.activeobjects</groupId>
-                            <artifactId>activeobjects-plugin</artifactId>
-                            <version>${ao.version}</version>
-                        </pluginArtifact>
-                        <pluginArtifact>
-                            <groupId>com.atlassian.activeobjects</groupId>
-                            <artifactId>activeobjects-jira-spi</artifactId>
-                            <version>${ao.version}</version>
-                        </pluginArtifact>
-                    </pluginArtifacts>
-                    <pluginDependencies>            
-                        <pluginDependency>                
-                            <groupId>com.atlassian.upm</groupId>                
-                            <artifactId>plugin-license-storage-plugin</artifactId>            
-                        </pluginDependency>        
-                    </pluginDependencies>
-                    <productVersion>${jira.version}</productVersion>
-                    <bundledArtifacts>
-                        <bundledArtifact>
-                            <groupId>com.atlassian.upm</groupId>
-                            <artifactId>atlassian-universal-plugin-manager-plugin</artifactId>
-                            <version>1.6.3</version>
-                        </bundledArtifact>
-                        <bundledArtifact>
-                            <groupId>com.atlassian.upm</groupId>
-                            <artifactId>plugin-license-storage-plugin</artifactId>
-                            <version>${upm.license.compatibility.version}</version>
-                        </bundledArtifact>
-                    </bundledArtifacts>
+							*;version="0";resolution:=optional
+						</Import-Package>
+						<DynamicImport-Package>
+							com.atlassian.upm.api.license;version="${upm.license.compatibility.version}",
+							com.atlassian.upm.api.license.entity;version="${upm.license.compatibility.version}",
+							com.atlassian.upm.api.util;version="${upm.license.compatibility.version}"
+						</DynamicImport-Package>
+						<Spring-Context>*;timeout:=60</Spring-Context>
+					</instructions>
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-storage-plugin</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                            <includeArtifactIds>plugin-license-storage-plugin</includeArtifactIds>
-                            <stripVersion>true</stripVersion>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
     <properties>
-        <jira.version>6.0</jira.version>
-        <amps.version>4.2.3</amps.version>
-        <jira.data.version>6.0</jira.data.version>
-        <upm.license.compatibility.version>2.10</upm.license.compatibility.version>
-        <sal.api.version>2.4.0</sal.api.version>
-        <atlassian.templaterenderer.version>1.0.5</atlassian.templaterenderer.version>
-        <ao.version>0.19.7</ao.version>
+    	<ao.version>1.1.1</ao.version>
+    	<atlassian.templaterenderer.version>1.5.5</atlassian.templaterenderer.version>
+    	<amps.version>6.1.2</amps.version>
+    	<guava.version>18.0</guava.version>
+		<javax.servlet.version>2.5</javax.servlet.version>
+        <jira.data.version>7.0.0-1</jira.data.version>
+		<jira.version>7.0.0-1</jira.version>
+		<sal.api.version>3.0.3</sal.api.version>
+		<upm.license.compatibility.version>2.8</upm.license.compatibility.version>
     </properties>
 </project>
